--- a/packages/theme-chalk/src/calendar.scss
+++ b/packages/theme-chalk/src/calendar.scss
@@ -1,133 +1,176 @@
-:root{
+:root {
 
 }
-$unit15:15px;
-.wp-calendar{
-  border-radius: 6px;
-  overflow: hidden;
-  user-select: none;
-  &-header{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: $unit15;
-    &-icon{
-      width: 22px;
-      height: 22px;
-      color: #999999;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 100%;
-      cursor: pointer;
-      &:hover{
-        color:  #0088FF;
-      }
-    }
-    &-title{
-      flex: 1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 18px;
-      color: #666666;
-      line-height: 25px;
-      font-weight: bold;
-      span{
-        &:hover{
-          color: #0088ff;
-          cursor: pointer;
-        }
-      }
-    }
-  }
-  &-content{
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 14px;
-    padding: $unit15 0;
-    &>*{
-      flex-shrink: 0;
-      width: calc(100% / 7);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 30px;
-    }
-    &-day{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      span{
-        width: 25px;
-        height: 25px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 100%;
-        cursor: pointer;
-        &:active, &:hover{
-          background-color: #a2a2a2;
-        }
-        &.isEvent{
-          position: relative;
-          &:before{
-            content: "";
-            position: absolute;
-            left: 50%;
-            bottom: 2px;
-            transform: translateX(-50%);
-            width: 3px;
-            height: 3px;
-            border-radius: 100%;
-            background-color: #fda023;
-          };
-        }
-        &.isActive{
-          background-color: #277ffc;
-          color: #FFFFFF;
-          &.isEvent{
-            &:before{
-              background-color: #FFFFFF;
-            }
-          }
-        }
-      }
 
-      &-header{
-          border-bottom: 1px solid #eeeeee;
-      }
-      &.prev, &.next{
-        color: #bababa;
-      }
+$unit15: 15px;
+.wp-calendar {
+    border-radius: 6px;
+    overflow: hidden;
+    user-select: none;
+
+    &-header {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: $unit15;
+
+        &-icon {
+            width: 22px;
+            height: 22px;
+            color: #999999;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100%;
+            cursor: pointer;
+
+            &:hover {
+                color: #0088FF;
+            }
+        }
+
+        &-title {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 18px;
+            color: #666666;
+            line-height: 25px;
+            font-weight: bold;
+
+            span {
+                &:hover {
+                    color: #0088ff;
+                    cursor: pointer;
+                }
+            }
+        }
     }
-    &-year{
-      width: calc(100% / 4);
-      min-height: 50px;
-      span{
-        &:hover{
-          color: #0088FF;
-          cursor: pointer;
+
+    &-content {
+        display: flex;
+        flex-wrap: wrap;
+        font-size: 14px;
+        padding: $unit15 0;
+
+        & > * {
+            flex-shrink: 0;
+            width: calc(100% / 7);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 30px;
         }
-        &.active{
-          color: #0088FF;
-          font-weight: bold;
+
+        &-day {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            span {
+                width: 25px;
+                height: 25px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 100%;
+                cursor: pointer;
+
+                &:active, &:hover {
+                    background-color: #a2a2a2;
+                }
+
+                &.isEvent {
+                    position: relative;
+
+                    &:before {
+                        content: "";
+                        position: absolute;
+                        left: 50%;
+                        bottom: 2px;
+                        transform: translateX(-50%);
+                        width: 3px;
+                        height: 3px;
+                        border-radius: 100%;
+                        background-color: #fda023;
+                    }
+                ;
+                }
+
+                &.isActive {
+                    background-color: #277ffc;
+                    color: #FFFFFF;
+
+                    &.isEvent {
+                        &:before {
+                            background-color: #FFFFFF;
+                        }
+                    }
+                }
+            }
+
+            &-header {
+                border-bottom: 1px solid #eeeeee;
+            }
+
+            &.prev, &.next {
+                color: #bababa;
+            }
         }
-      }
+
+        &-year {
+            width: calc(100% / 4);
+            min-height: 50px;
+
+            span {
+                &:hover {
+                    color: #0088FF;
+                    cursor: pointer;
+                }
+
+                &.active {
+                    color: #0088FF;
+                    font-weight: bold;
+                }
+            }
+        }
+
+        &-month {
+            width: calc(100% / 4);
+            min-height: 50px;
+
+            span {
+                &:hover {
+                    color: #0088FF;
+                    cursor: pointer;
+                }
+
+                &.active {
+                    color: #0088FF;
+                    font-weight: bold;
+                }
+            }
+        }
     }
-    &-month{
-      width: calc(100% / 4);
-      min-height: 50px;
-      span{
-        &:hover{
-          color: #0088FF;
-          cursor: pointer;
+    &-lunar{
+        .wp-calendar-content-day{
+            flex-direction: column;
+            &.current{
+                span{
+                    &:hover{
+                        background-color: transparent;
+                    }
+                    &.isActive{
+                        background-color: transparent;
+                    }
+                }
+            }
+            .wp-calendar-content-day-lunar{
+                width: auto;
+                font-size: 12px;
+
+            }
         }
-        &.active{
-          color: #0088FF;
-          font-weight: bold;
-        }
-      }
     }
-  }
 }
