--- a/packages/theme-chalk/src/calendar.scss
+++ b/packages/theme-chalk/src/calendar.scss
@@ -167,6 +167,9 @@ $unit15: 15px;
                 &:hover{
                     background-color: transparent;
                 }
+                &.wp-calendar-content-day-cell{
+                    font-weight: bold;
+                }
             }
             &.current{
                 span{
@@ -185,6 +188,11 @@ $unit15: 15px;
             }
             &.isActive{
                 border:2px solid #5e67ef;
+            }
+            &.isWeek{
+                .wp-calendar-content-day-cell{
+                    color: #f6434c;
+                }
             }
         }
     }
