[add] calendar 日历

--- a/packages/theme-chalk/src/calendar.scss
+++ b/packages/theme-chalk/src/calendar.scss
@@ -109,6 +109,12 @@ $unit15: 15px;
                         }
                     }
                 }
+
+            }
+            &-lunar{
+                &.isLunarFestival{
+                    color: #f43e4e !important;
+                }
             }
 
             &-header {
