--- a/packages/theme-chalk/src/calendar.scss
+++ b/packages/theme-chalk/src/calendar.scss
@@ -307,9 +307,24 @@ $unit15: 15px;
                         font-size: 40px;
                         font-weight: bold;
                         display: flex;
+                        flex-direction: column;
                         justify-content: center;
                         align-items: center;
                         margin: 0 auto 15px auto;
+                        cursor: pointer;
+                        user-select: none;
+                        position: relative;
+                        &:hover{
+                            color: #5661ee;
+                            background-color: #ffffff;
+                        }
+                        &:after{
+                            content: attr(title);
+                            font-size: 12px;
+                            left: 0;
+                            right: 0;
+                            bottom: 12px;
+                        }
                     }
                     &-text{
                         display: flex;
@@ -318,6 +333,9 @@ $unit15: 15px;
                         font-size: 14px;
                         &>*{
                             margin-bottom: 10px;
+                        }
+                        &-festival{
+                            width: 100%;
                         }
                     }
                     &-task{
