[mod] better style

--- a/packages/theme-chalk/src/pro/pro-cascader.scss
+++ b/packages/theme-chalk/src/pro/pro-cascader.scss
@@ -25,6 +25,9 @@
         .wp-icon {
             margin-right: 6px;
         }
+        .wp-checkbox--label {
+            padding-left: 8px;
+        }
     }
     &--checkbox {
         .wp-icon {
