--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -44,6 +44,7 @@
 @use "./calendar.scss";
 @use "./cascader.scss";
 @use "./date-picker.scss";
+@use "./switch.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
