--- a/packages/theme-chalk/src/input.scss
+++ b/packages/theme-chalk/src/input.scss
@@ -83,6 +83,7 @@
         display: flex;
         align-items: center;
         &-icon {
+            color: #c0c4cc;
             font-size: 12px;
             padding: 1px;
             transition: .2s;
