--- a/packages/theme-chalk/src/tag-input.scss
+++ b/packages/theme-chalk/src/tag-input.scss
@@ -33,6 +33,7 @@
         display: flex;
         align-items: center;
         &-icon {
+            color: #c0c4cc;
             margin-left: 4px;
             font-size: 12px;
             padding: 1px;
