[add] date-picker 日期选择器

--- a/packages/theme-chalk/src/date-picker.scss
+++ b/packages/theme-chalk/src/date-picker.scss
@@ -1,4 +1,11 @@
 .wp-date-picker{
+    &-footer{
+        border-top: 1px solid #eeeeee;
+        padding: 15px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
 }
 .wp-date-picker-panel-popover{
     .wp-popover-content{
