--- a/packages/theme-chalk/src/calendar.scss
+++ b/packages/theme-chalk/src/calendar.scss
@@ -174,6 +174,17 @@ $unit15: 15px;
                     }
                 }
             }
+            &-disabled{
+                cursor: not-allowed;
+                background-color: #f5f7fa;
+                .wp-calendar-content-day-cell{
+                    cursor: not-allowed;
+                    color: #d8d8d8;
+                    &:hover{
+                        background-color: transparent;
+                    }
+                }
+            }
         }
 
         &-year {
