--- a/packages/theme-chalk/src/calendar.scss
+++ b/packages/theme-chalk/src/calendar.scss
@@ -123,6 +123,7 @@ $unit15: 15px;
                 margin-bottom: 15px;
             }
             &-event{
+                width: 100%;
                 &-cell{
                     background-color: #ffe4dd;
                     border-radius: 2px;
@@ -185,6 +186,18 @@ $unit15: 15px;
                     }
                 }
             }
+            &-active-map{
+                .wp-calendar-content-day-cell{
+                    background-color: #ff724b;
+                    color: #FFFFFF;
+                    box-shadow: 0 0 0 3px #ffd4ca;
+                    &.isEvent {
+                        &:before {
+                            background-color: #FFFFFF;
+                        }
+                    }
+                }
+            }
         }
 
         &-year {
@@ -223,6 +236,12 @@ $unit15: 15px;
     }
     &-lunar{
         border:2px solid #5e67ef;
+        .wp-calendar-content{
+            gap: 5px;
+            & > *{
+                width: calc((100%  - 5px * 6) / 7);
+            }
+        }
         .wp-calendar-content-day{
             min-height: 80px;
             border-radius: 6px;
@@ -268,6 +287,32 @@ $unit15: 15px;
                     }
                 }
 
+            }
+            &-disabled{
+                cursor: not-allowed;
+                background-color: #f5f7fa;
+                .wp-calendar-content-day-cell{
+                    cursor: not-allowed;
+                    color: #d8d8d8;
+                    &:hover{
+                        background-color: transparent;
+                    }
+                }
+            }
+            &-active-map{
+                border:2px solid #ff724b !important;
+                background-color: #ffd4ca;
+                overflow: hidden;
+                .wp-calendar-content-day-cell{
+                    background-color: transparent;
+                    color: #FFFFFF;
+                    box-shadow: 0 0 0 3px transparent;
+                    &.isEvent {
+                        &:before {
+                            background-color: #FFFFFF;
+                        }
+                    }
+                }
             }
         }
     }
