[add] date-picker 日期选择器

--- a/packages/theme-chalk/src/date-picker.scss
+++ b/packages/theme-chalk/src/date-picker.scss
@@ -19,4 +19,25 @@
             }
         }
     }
+    &-week{
+        .wp-select-panel{
+            .wp-calendar{
+                .wp-calendar-content{
+                    .wp-calendar-content-day-week{
+                        cursor: pointer;
+                        &:hover{
+                            background-color: #f2f6fc;
+                            border-radius: 22px;
+                        }
+                        .wp-calendar-content-day{
+                            min-height: 45px;
+                            margin-bottom: 0;
+                            display: flex;
+                            justify-content: center;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
