--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -45,6 +45,7 @@
 @use "./cascader.scss";
 @use "./date-picker.scss";
 @use "./switch.scss";
+@use "./tabs.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
