[add] date-picker 日期选择器

--- a/packages/theme-chalk/src/date-picker.scss
+++ b/packages/theme-chalk/src/date-picker.scss
@@ -34,6 +34,9 @@
                             margin-bottom: 0;
                             display: flex;
                             justify-content: center;
+                            &.wp-calendar-content-day-week-map{
+                                background-color: #f00;
+                            }
                         }
                     }
                 }
