--- a/packages/theme-chalk/src/index.scss
+++ b/packages/theme-chalk/src/index.scss
@@ -46,6 +46,7 @@
 @use "./date-picker.scss";
 @use "./switch.scss";
 @use "./tabs.scss";
+@use "./carousel.scss";
 
 @use "./pro/pro-upload.scss";
 @use "./pro/pro-editor.scss";
