[mod] change color

--- a/packages/theme-chalk/src/tabs.scss
+++ b/packages/theme-chalk/src/tabs.scss
@@ -10,7 +10,7 @@
     --wp-tabs-line-height: 2px;
     --wp-tabs-tab-padding: 10px;
     --wp-tabs-tab-font-size: 14px;
-    --wp-tabs-card-title-background: #eee;
+    --wp-tabs-card-title-background: #f5f5f5;
     --wp-tabs-card-title-active-background: #fff;
     --wp-tabs-card-title-cell-padding: 10px 15px;
     --wp-tabs-card-title-padding: 0;
