--- a/packages/theme-chalk/src/date-picker.scss
+++ b/packages/theme-chalk/src/date-picker.scss
@@ -99,5 +99,8 @@
                 border-left: 1px solid #eeeeee;
             }
         }
+        .wp-calendar-content-day{
+            padding: 5px 0 !important;
+        }
     }
 }
